--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "author": {
-    "name": "Rizki Rifani",
-    "email": "rizkirifani7@gmail.com"
-  },
-  "license": "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International",
-  "dependencies": {
-    "ammo.js": "^0.0.10",
-    "ammojs-typed": "^1.0.6",
-    "cannon": "^0.6.2",
-    "lil-gui": "^0.18.2",
-    "three": "^0.151.3",
-    "three-stdlib": "^2.21.8"
-  },
-  "devDependencies": {
-    "@types/three": "^0.173.0",
-    "vite": "^4.3.1"
-  }
+	"author": {
+		"name": "Rizki Rifani",
+		"email": "rizkirifani7@gmail.com"
+	},
+	"scripts": {
+		"build": "vite build",
+		"start": "vite"
+	},
+	"license": "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International",
+	"dependencies": {
+		"ammo.js": "^0.0.10",
+		"ammojs-typed": "^1.0.6",
+		"cannon": "^0.6.2",
+		"lil-gui": "^0.18.2",
+		"three": "^0.151.3",
+		"three-stdlib": "^2.21.8"
+	},
+	"devDependencies": {
+		"@types/three": "^0.173.0",
+		"vite": "^4.3.1"
+	}
 }
