--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"repository": "https://github.com/rizkirifandi7/3d-art-gallery-threejs",
 	"author": {
 		"name": "Rizki Rifani",
 		"email": "rizkirifani7@gmail.com"
@@ -21,3 +22,4 @@
 		"vite": "^4.3.1"
 	}
 }
+
