--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 		"name": "Rizki Rifani",
 		"email": "rizkirifani7@gmail.com"
 	},
-	"main": "index.js",
+	"main": "main.js",
 	"scripts": {
 		"build": "vite build",
 		"dev": "vite",
